--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="font-primary bg-blue-50 text-gray-600">
+    <div
+      id="root"
+      class="mx-auto flex max-w-7xl flex-col gap-2 p-2 sm:p-6 md:flex-row"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
