--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Admin Dashboard</title>
   </head>
   <body class="font-primary bg-blue-50 text-gray-600">
-    <div
-      id="root"
-      class="mx-auto flex max-w-7xl flex-col gap-2 p-2 sm:p-6 md:flex-row"
-    ></div>
+    <div id="root" class="mx-auto flex max-w-7xl flex-row gap-2 p-6"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
