--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Admin Dashboard</title>
   </head>
   <body class="font-primary bg-blue-50 text-gray-600">
-    <div id="root" class="mx-auto flex max-w-7xl flex-row gap-2 p-6"></div>
+    <div
+      id="root"
+      class="mx-auto flex max-w-7xl flex-row gap-2 p-2 sm:p-4 md:p-6"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
